# ladybird

./: .clang-format  .clang-tidy  .clangd  .cmake-format  .gdbinit  .gersemi  .gitattributes  .gitignore  .lldbinit  .mailmap  .pre-commit-config.yaml  .prettierignore  .prettierrc  .swift-format  .swift-version  .ycm_extra_conf.py  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FORK_README.md  ISSUES.md  LICENSE  README.md  README_test.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  STATUS.md  WINDOWS_IMPLEMENTATION_SUMMARY.md  WINDOWS_README.md  WINDOWS_SUPPORT_COMPLETE.md  _typos.toml  amul.txt  amul1.txt  build-log.txt  build-windows.bat  build-windows.ps1  build_ladybird.sh  (+20 more)
AK/: AK+Swift.swift  Array.h  AsciiChar.h  AsciiStringView.h  Assertions.cpp  Assertions.h  Atomic.h  AtomicOwnPtr.h  AtomicRefCounted.h  Backtrace.h.in  Badge.h  Base64.cpp  Base64.h  BigIntBase.h  BinaryHeap.h  BinarySearch.h  BitStream.h  Bitmap.h  BitmapView.h  BufferedStream.h  BuiltinWrappers.h  BumpAllocator.h  ByteBuffer.h  ByteString.cpp  ByteString.h  ByteStringImpl.cpp  ByteStringImpl.h  CMakeLists.txt  COWVector.h  Checked.h  CheckedFormatString.h  CircularBuffer.cpp  CircularBuffer.h  CircularQueue.h  Complex.h  Concepts.h  ConstrainedStream.cpp  ConstrainedStream.h  Coroutine.cpp  Coroutine.h  (+201 more)
Ladybird/: CMakeLists.txt  DefaultSettings.h  FontPlugin.cpp  FontPlugin.h  HelperProcess.cpp  HelperProcess.h  ImageCodecPlugin.cpp  ImageCodecPlugin.h  Info.plist  MachPortServer.cpp  Types.h  Utilities.cpp  Utilities.h  Utils.cpp  Utils.h  default.nix
Ladybird/Android/: BuildLagomTools.sh  CMakeLists.txt  build.gradle.kts  vcpkg_android.cmake
Ladybird/AppKit/: CMakeLists.txt  main.mm  module.modulemap
Ladybird/Headless/: Application.cpp  Application.h  CMakeLists.txt  Fixture.cpp  Fixture.h  HeadlessWebView.cpp  HeadlessWebView.h  Test.cpp  Test.h  main.cpp
Ladybird/ImageDecoder/: CMakeLists.txt  main.cpp
Ladybird/Qt/: Application.cpp  Application.h  AudioCodecPluginQt.cpp  AudioCodecPluginQt.h  AudioThread.cpp  AudioThread.h  BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  EventLoopImplementationQt.cpp  EventLoopImplementationQt.h  FindInPageWidget.cpp  InspectorWidget.cpp  InspectorWidget.h  QtUtils.cpp  QtUtils.h  RequestManagerQt.cpp  RequestManagerQt.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  StringUtils.cpp  StringUtils.h  TVGIconEngine.cpp  Tab.cpp  Tab.h  TabBar.cpp  TabBar.h  TaskManagerWindow.cpp  TaskManagerWindow.h  WebContentView.cpp  WebContentView.h  WebSocketImplQt.cpp  WebSocketImplQt.h  WebSocketQt.cpp  WebSocketQt.h  main.cpp
Ladybird/RequestServer/: CMakeLists.txt  main.cpp
Ladybird/SQLServer/: CMakeLists.txt
Ladybird/WebContent/: CMakeLists.txt  main.cpp
Ladybird/WebDriver/: CMakeLists.txt  main.cpp
Ladybird/WebWorker/: CMakeLists.txt  main.cpp
Ladybird/cmake/: AndroidExtras.cmake  EnableLagom.cmake  GenerateSwiftHeader.cmake  InstallRules.cmake  ResourceFiles.cmake
Libraries/: CMakeLists.txt  RustAllocator.rs
Libraries/LibArchive/: Zip.cpp
Libraries/LibAudioServer/: BrokerOfAudioServer.cpp  BrokerOfAudioServer.h  CMakeLists.txt  ChannelMap.h  LibAudioServer.cpp  LibAudioServer.h  SampleSpecification.h  SessionClientOfAudioServer.cpp  SessionClientOfAudioServer.h  SharedCircularBuffer.cpp  SharedCircularBuffer.h  SingleSinkSessionClient.cpp  SingleSinkSessionClient.h  ToAudioServerFromBroker.ipc  ToAudioServerFromSessionClient.ipc  ToBrokerFromAudioServer.ipc  ToSessionClientFromAudioServer.ipc
Libraries/LibAudioServerClient/: CMakeLists.txt  Client.cpp  Client.h
Libraries/LibCompress/: Brotli.cpp  Brotli.h  BrotliDictionary.cpp  CMakeLists.txt  Deflate.cpp  Deflate.h  Forward.h  GenericZlib.cpp  GenericZlib.h  Gzip.cpp  Gzip.h  Helpers.h  Lzw.h  Zlib.cpp  Zlib.h  Zstd.cpp  Zstd.h
Libraries/LibCore/: AddressInfoVector.cpp  AddressInfoVector.h  AnonymousBuffer.cpp  AnonymousBuffer.h  AnonymousBufferWindows.cpp  ArgsParser.cpp  ArgsParser.h  CMakeLists.txt  Command.cpp  Command.h  ConfigFile.cpp  ConfigFile.h  DateTime.cpp  DateTime.h  DirIterator.cpp  DirIterator.h  Directory.cpp  Directory.h  DirectoryEntry.cpp  DirectoryEntry.h  ElapsedTimer.cpp  ElapsedTimer.h  Environment.cpp  Environment.h  Event.cpp  Event.h  EventLoop.cpp  EventLoop.h  EventLoopExecutor.swift  EventLoopImplementation.cpp  EventLoopImplementation.h  EventLoopImplementationUnix.cpp  EventLoopImplementationUnix.h  EventLoopImplementationWindows.cpp  EventLoopImplementationWindows.h  EventReceiver.cpp  EventReceiver.h  EventSwift.h  EventSwift.mm  File.cpp  (+95 more)
Libraries/LibCrypto/: CMakeLists.txt  KeyProvider.cpp  KeyProvider.h  OpenSSL.cpp  OpenSSL.h  OpenSSLForward.h  SecureByteBuffer.h  SecureRandom.cpp  SecureRandom.h  SecureStore.cpp  SecureStore.h
Libraries/LibDNS/: CMakeLists.txt  Message.cpp  Message.h  Resolver.h
Libraries/LibDatabase/: CMakeLists.txt  Database.cpp  Database.h  Forward.h
Libraries/LibDevTools/: Actor.cpp  Actor.h  CMakeLists.txt  CallbackTransport.h  Connection.cpp  Connection.h  DevToolsDelegate.h  DevToolsServer.cpp  DevToolsServer.h  Forward.h  IndexedDBSerialization.cpp  IndexedDBSerialization.h  Node.h  StorageHelpers.cpp  StorageHelpers.h
Libraries/LibDiff/: CMakeLists.txt  Format.cpp  Format.h  Forward.h  Generator.cpp  Hunks.cpp  Hunks.h
Libraries/LibFileSystem/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  TempFile.cpp
Libraries/LibGC/: BlockAllocator.cpp  BlockAllocator.h  CMakeLists.txt  Cell.cpp  Cell.h  CellAllocator.cpp  CellAllocator.h  ConservativeHashMap.cpp  ConservativeHashMap.h  ConservativeHashTable.cpp  ConservativeHashTable.h  ConservativeRangeProvider.cpp  (+47 more)
Tests/: CMakeLists.txt
UI/: CMakeLists.txt  FontPlugin.cpp  HelperProcess.cpp  ImageCodecPlugin.cpp  Info.plist  MachPortServer.cpp  MachPortServer.h  UI.h.in  Utilities.cpp  Utilities.h  default.nix
Utilities/: CMakeLists.txt  abench.cpp  animation.cpp  dns.cpp  dump-html-tokens.cpp  dump-html-tree.cpp  icc.cpp  image.cpp  js.cpp  lzcat.cpp  test262-runner.cpp  wasm.cpp  xml.cpp  xzcat.cpp
(+26236 files in other folders)
