[workspace]
members = [
    "Libraries/LibJS/Rust",
]
resolver = "2"

[profile.release]
panic = "abort"

[profile.distribution]
inherits = "release"
incremental = false
codegen-units = 1
lto = true

[workspace.lints.clippy]
all = "deny" # includes lintgroups: correctness, suspicious, style, complexity, perf