add_subdirectory(LibCompress)
add_subdirectory(LibCrypto)
add_subdirectory(LibDatabase)
add_subdirectory(LibDiff)
add_subdirectory(LibDNS)
add_subdirectory(LibGC)
add_subdirectory(LibHTTP)
add_subdirectory(LibIPC)
add_subdirectory(LibJS)
add_subdirectory(LibRequests)
add_subdirectory(LibSyntax)
add_subdirectory(LibTest)
add_subdirectory(LibThreading)
add_subdirectory(LibTLS)
add_subdirectory(LibWasm)
add_subdirectory(LibWebSocket)
add_subdirectory(LibXML)

if (ENABLE_GUI_TARGETS)
    add_subdirectory(LibDevTools)
    add_subdirectory(LibGfx)
    add_subdirectory(LibImageDecoderClient)
    add_subdirectory(LibMedia)
    add_subdirectory(LibWeb)
    add_subdirectory(LibWebView)
endif()

# FIXME: Increase support for building targets on Windows
if (WIN32)
    return()
endif()

add_subdirectory(LibLine)
