add_subdirectory(AK)
add_subdirectory(LibCompress)
add_subdirectory(LibCore)
add_subdirectory(LibDiff)
add_subdirectory(LibDNS)
add_subdirectory(LibGfx)
add_subdirectory(LibJS)
add_subdirectory(LibRegex)
add_subdirectory(LibTest)
add_subdirectory(LibTextCodec)
add_subdirectory(LibThreading)
add_subdirectory(LibUnicode)
add_subdirectory(LibURL)
add_subdirectory(LibMedia)
add_subdirectory(LibWasm)
add_subdirectory(LibWeb)
add_subdirectory(LibWebView)
add_subdirectory(LibXML)
add_subdirectory(LibCrypto)
add_subdirectory(LibTLS)
